Story update & index.html update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Inter Font -->
+    <!-- Preconnect to Google's font domains -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Load the CSS stylesheet for the font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Scripts  -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "name": "Giorgi Bekauri",
+        "jobTitle": "Front-End Developer",
+        "url": "https://bekauridev.vercel.app",
+        "sameAs": [
+          "https://www.linkedin.com/in/giorgi-bekauri-8ba974228/",
+          "https://github.com/bekauridev"
+        ],
+        "description": "I am a front-end developer specializing in building exceptional digital experiences.",
+        "image": "https://giorgibekauri.netlify.app/about-pic-1.0d2024e1.webp"
+      }
+    </script>
+
     <title>Vite + React</title>
   </head>
   <body>
@@ -16,31 +43,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-<!-- Inter 
-  Preconnect to Google's font domains
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  
-      Preload specific font files for faster rendering
-      <link
-        rel="preload"
-        href="https://fonts.gstatic.com/s/inter/v12/UcCayBnxmVnvjpJhNFZZkXxh6zoApQ.woff2"
-        as="font"
-        type="font/woff2"
-        crossorigin="anonymous"
-      />
-      <link
-        rel="preload"
-        href="https://fonts.gstatic.com/s/inter/v12/UcCayBnxmVnvjpJhNFZZkXxh6zoAqg.woff2"
-        as="font"
-        type="font/woff2"
-        crossorigin="anonymous"
-      />
-  
-      Load the CSS stylesheet for the font
-      <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet"
-      />
-  -->
