user avatar && website logo update

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/public/website-logo.png" />
     <meta
       name="description"
-      content="BekauriDev showcases a collection of web development projects, highlighting expertise in frontend and backend technologies. Explore my work in building responsive and user-friendly applications, complete with detailed case studies and project insights"
+      content="BekauriDev presents a portfolio of web development projects, demonstrating proficiency in both frontend and backend technologies. Explore a range of responsive, user-focused applications and informative blogs aimed at fostering learning and growth."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
