font implementation changed

--- a/index.html
+++ b/index.html
@@ -2,22 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/public/website-logo.png" />
+    <link rel="icon" type="image/png" href="/website-logo.png" />
     <meta
       name="description"
       content="BekauriDev presents a portfolio of web development projects, demonstrating proficiency in both frontend and backend technologies. Explore a range of responsive, user-focused applications and informative blogs aimed at fostering learning and growth."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Inter Font -->
-    <!-- Preconnect to Google's font domains -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- Load the CSS stylesheet for the font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
 
     <!-- Scripts  -->
     <script type="application/ld+json">
