google site verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/website-logo.png" />
     <meta
+      name="google-site-verification"
+      content="9bUnX6JpT_QcXKiIdYtho27zst7ZsuZzukljX_Z6TZA"
+    />
+    <meta
       name="description"
       content="BekauriDev presents a portfolio of web development projects, demonstrating proficiency in both frontend and backend technologies. Explore a range of responsive, user-focused applications and informative blogs aimed at fostering learning and growth."
     />
