--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       }
     </script>
 
-    <title>Vite + React</title>
+    <title>Bekauri</title>
   </head>
   <body>
     <div id="root"></div>
