Google Tag Manager removed && Mouseflow added

--- a/index.html
+++ b/index.html
@@ -14,20 +14,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Scripts  -->
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-T8DCKNPL");
-    </script>
-    <!-- End Google Tag Manager -->
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
@@ -43,19 +29,19 @@
         "image": "https://giorgibekauri.netlify.app/about-pic-1.0d2024e1.webp"
       }
     </script>
-
+    <script type="text/javascript">
+      window._mfq = window._mfq || [];
+      (function () {
+        var mf = document.createElement("script");
+        mf.type = "text/javascript";
+        mf.defer = true;
+        mf.src = "//cdn.mouseflow.com/projects/ca1e084d-4ac8-4add-b79c-ebc9a597af36.js";
+        document.getElementsByTagName("head")[0].appendChild(mf);
+      })();
+    </script>
     <title>Bekauri</title>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-T8DCKNPL"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
