top loader added

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         "@context": "http://schema.org",
         "@type": "Person",
         "name": "Giorgi Bekauri",
-        "jobTitle": "Front-End Developer",
+        "jobTitle": "Web Developer",
         "url": "https://bekauridev.vercel.app",
         "sameAs": [
           "https://www.linkedin.com/in/giorgi-bekauri-8ba974228/",
           "https://github.com/bekauridev"
         ],
-        "description": "I am a front-end developer specializing in building exceptional digital experiences.",
+        "description": "I am a Web developer specializing in building exceptional digital experiences.",
         "image": "https://giorgibekauri.netlify.app/about-pic-1.0d2024e1.webp"
       }
     </script>
