--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/website-logo.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://bekauridev.vercel.app" />
+
+    <!-- Favicon and App Icons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png" />
+
+    <!-- Manifest for PWA -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Meta Tags -->
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="author" content="Giorgi Bekauri" />
     <meta
       name="google-site-verification"
       content="9bUnX6JpT_QcXKiIdYtho27zst7ZsuZzukljX_Z6TZA"
@@ -13,27 +32,54 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Scripts  -->
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Portfolio ･ Giorgi Bekauri" />
+    <meta
+      property="og:description"
+      content="Explore Giorgi Bekauri’s portfolio of full-stack web projects and blogs."
+    />
+    <meta property="og:url" content="https://bekauridev.vercel.app" />
+    <meta
+      property="og:image"
+      content="https://giorgibekauri.netlify.app/about-pic-1.0d2024e1.webp"
+    />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portfolio ･ Giorgi Bekauri" />
+    <meta
+      name="twitter:description"
+      content="Explore Giorgi Bekauri’s portfolio of full-stack web projects and blogs."
+    />
+    <meta
+      name="twitter:image"
+      content="https://giorgibekauri.netlify.app/about-pic-1.0d2024e1.webp"
+    />
+
+    <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
       {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "Person",
+        "@id": "https://bekauridev.vercel.app#person",
         "name": "Giorgi Bekauri",
         "jobTitle": "Web Developer",
         "url": "https://bekauridev.vercel.app",
+        "mainEntityOfPage": "https://bekauridev.vercel.app",
         "sameAs": [
           "https://www.linkedin.com/in/giorgi-bekauri-8ba974228/",
           "https://github.com/bekauridev"
         ],
-        "description": "I am a Web developer specializing in building exceptional digital experiences.",
+        "description": "Web developer focused on building reliable, accessible, and efficient web applications using modern frontend and backend technologies."
         "image": "https://giorgibekauri.netlify.app/about-pic-1.0d2024e1.webp"
       }
     </script>
 
-    <title>Bekauri</title>
+    <title>Portfolio ･ Giorgi Bekauri</title>
   </head>
+
   <body>
-    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
