--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- Meta Tags -->
     <meta name="theme-color" content="#ffffff" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="author" content="Giorgi Bekauri" />
