update projects page projects details page and index html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://bekauridev.vercel.app" />
+    <link rel="canonical" href="https://bekauridev.vercel.app/" />
 
     <!-- Favicon and App Icons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
@@ -72,7 +72,7 @@
           "https://www.linkedin.com/in/giorgi-bekauri-8ba974228/",
           "https://github.com/bekauridev"
         ],
-        "description": "Web developer focused on building reliable, accessible, and efficient web applications using modern frontend and backend technologies."
+        "description": "Web developer focused on building reliable, accessible, and efficient web applications using modern frontend and backend technologies.",
         "image": "https://giorgibekauri.netlify.app/about-pic-1.0d2024e1.webp"
       }
     </script>
